--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "aos": "^2.3.4",
     "core-js": "^3.8.3",
-    "firebase": "^9.9.1",
+    "firebase": "^9.9.4",
+    "firebase-tools": "^11.9.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
